--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:text="@string/btnLogin"
-            android:id="@+id/MAbtnVerJuego"
+            android:id="@+id/MAbtnVerJuegos"
             android:layout_gravity="center_horizontal"
             style="@style/estiloBotonAzul" />
 
