--- a/app/src/main/res/layout/activity_mis_juegos.xml
+++ b/app/src/main/res/layout/activity_mis_juegos.xml
@@ -6,4 +6,35 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="es.arjevi.applanzamientosjuegos.MisJuegosActivity">
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/linearLayout">
+
+        <Spinner
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/MJAspinnerPlataforma" />
+
+        <Spinner
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/MJAspinnerGenero" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/linearLayout">
+
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:id="@+id/MJAlistaJuegos" />
+    </LinearLayout>
+
 </RelativeLayout>
