--- a/app/src/main/res/layout/item_juego_lista.xml
+++ b/app/src/main/res/layout/item_juego_lista.xml
@@ -6,7 +6,9 @@
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_margin="25dp">
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="30dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -14,14 +16,16 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/itemTxtNombre"
             android:id="@+id/itemTxtNombre"
-            android:layout_marginBottom="15dp" />
+            android:layout_marginBottom="15dp"
+            android:textSize="20dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/itemTxtPlataforma"
-            android:id="@+id/itemTxtPlataforma" />
+            android:id="@+id/itemTxtPlataforma"
+            android:textSize="20dp" />
 
     </LinearLayout>
 
@@ -29,7 +33,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="25dp">
+        android:layout_margin="15dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -37,13 +41,15 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/itemTxtGenero"
             android:id="@+id/itemTxtGenero"
-            android:layout_marginBottom="15dp" />
+            android:layout_marginBottom="15dp"
+            android:textSize="20dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/itemTxtFinalizado"
-            android:id="@+id/itemTxtFinalizado" />
+            android:id="@+id/itemTxtFinalizado"
+            android:textSize="20dp" />
     </LinearLayout>
 </LinearLayout>
